fix prob with products images on IE11

--- a/DMS/DMS.Web/Content/Main/2-modules/products.scss
+++ b/DMS/DMS.Web/Content/Main/2-modules/products.scss
@@ -132,10 +132,6 @@ section#product-overview {
         height: 200px;
         width: auto;
         @extend .center-block;
-        @media all and (-ms-high-contrast: none) {
-            width: auto;
-            max-height: 200px;
-        }
     }
     h2 {
         @extend .section-header;
